--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ body{
 	margin:50px 100px;
 	color: #00ff00;
 }
+.img_arrow{
+	/*background: url(../images/arrow.png);*/
+	margin-bottom: -14px;
+}
 .h_l_link{
 	float: left;
 	margin:50px 100px 50px 424px ;
